# oscbot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  default-danser.json  docker-compose.yaml
.github/workflows/: docker-image.yml
migrations/: 2026-01-08 05.52- initial migration.sql  20260110130725_init.sql
src/: defaults.rs  discord_helper.rs  embeds.rs  main.rs  migrations.rs
src/commands/: admin_commands.rs  mod.rs  replay_commands.rs  skin_commands.rs  suggest_commands.rs  test_commands.rs
src/db/: mod.rs
src/events/: button_actions.rs  mod.rs
src/events/background_tasks/: mod.rs  refresh_feed.rs
src/firebase/: mod.rs  scores.rs  user.rs
src/generate/: danser.rs  upload.rs  youtube_text.rs
src/osu/: formatter.rs  mod.rs  skin.rs
src/sqlite/: mod.rs  score.rs  skin.rs  user.rs
