[package]
name = "oscbot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15.0"
rosu-v2 = {version = "0.11.0", features = ["cache", "macros", "replay"]}
image = "0.25.9"
imageproc = "0.25.0"
reqwest = { version = "0.12.28", features = ["blocking"] }
ab_glyph = "0.2.32"
firebase-rs = "2.2.2"
